@@ -18,6 +18,7 @@ import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import org.junit.jupiter.api.Assertions;
+
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Nested;
@@ -33,6 +34,7 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import org.mockito.Mock;
 import org.mockito.Mockito;
+
 import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.lenient;
@@ -175,7 +177,7 @@ class UserControllerTest {
                 appRoleService, appService, disableUserService, notificationService);
         userController.disableUserFeatureEnabled = true;
         lenient().when(accessControlService.getEnablementFlags(any()))
-                .thenReturn(new AccessControlService.EnablementFlags(false, false));
+                .thenReturn(new AccessControlService.EnablementFlags(false, false, false));
         model = new ExtendedModelMap();
         firmSearchForm = FirmSearchForm.builder().build();
     }
@@ -202,7 +204,8 @@ class UserControllerTest {
         assertThat(view).isEqualTo("enable-user-completed");
         assertThat(model.getAttribute("user")).isEqualTo(enabledUser);
         assertThat(model.getAttribute("referer")).isEqualTo(referer);
-        assertThat(model.getAttribute(ModelAttributes.PAGE_TITLE)).isEqualTo("Enable User Success - " + enabledUser.getFullName());
+        assertThat(model.getAttribute(ModelAttributes.PAGE_TITLE))
+                .isEqualTo("Enable User Success - " + enabledUser.getFullName());
     }
 
     @Test
@@ -210,7 +213,8 @@ class UserControllerTest {
         UUID noUserId = UUID.randomUUID();
         when(userService.getEntraUserById(noUserId.toString())).thenReturn(Optional.empty());
 
-        assertThrows(NoSuchElementException.class, () -> userController.enableUserPost(noUserId.toString(), authentication, model, null));
+        assertThrows(NoSuchElementException.class,
+                () -> userController.enableUserPost(noUserId.toString(), authentication, model, null));
 
     }
 
@@ -343,7 +347,8 @@ class UserControllerTest {
         when(userService.getPageOfUsersBySearch(any(UserSearchCriteria.class), anyInt(), anyInt(), any(),
                 any())).thenReturn(paginatedUsers);
 
-        String view = userController.displayAllUsers(10, 1, null, null, null, "", false, false, false, false, null, firmSearchForm,
+        String view = userController.displayAllUsers(10, 1, null, null, null, "", false, false, false, false, null,
+                firmSearchForm,
                 model,
                 session,
                 authentication);
@@ -360,12 +365,16 @@ class UserControllerTest {
     void givenUsersExist_whenDisplayAllUsers_thenPopulatesModelAndReturnsUsersView() {
         // Arrange
         PaginatedUsers mockPaginatedUsers = new PaginatedUsers();
-        UserSearchResultsDto userSearchResultsDto1 = new UserSearchResultsDto(UUID.randomUUID(), true, UserType.EXTERNAL,
-                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.INCOMPLETE, false, "Test", "User", "Test User",
-                "test@example.com", UserStatus.ACTIVE, "Test Firm",  InvitationStatus.INVITE_SENT, true, true);
-        UserSearchResultsDto userSearchResultsDto2 = new UserSearchResultsDto(UUID.randomUUID(), true, UserType.EXTERNAL,
-                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.COMPLETE, false, "Test", "User", "Test User",
-                "test@example.com", UserStatus.ACTIVE, "Test Firm",  InvitationStatus.INVITE_SENT, true, true);
+        UserSearchResultsDto userSearchResultsDto1 = new UserSearchResultsDto(UUID.randomUUID(), true,
+                UserType.EXTERNAL,
+                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.INCOMPLETE, false, "Test", "User",
+                "Test User",
+                "test@example.com", UserStatus.ACTIVE, "Test Firm", InvitationStatus.INVITE_SENT, true, true);
+        UserSearchResultsDto userSearchResultsDto2 = new UserSearchResultsDto(UUID.randomUUID(), true,
+                UserType.EXTERNAL,
+                UUID.randomUUID(), UserProfileStatus.COMPLETE, UserProfileSilasStatus.COMPLETE, false, "Test", "User",
+                "Test User",
+                "test@example.com", UserStatus.ACTIVE, "Test Firm", InvitationStatus.INVITE_SENT, true, true);
         mockPaginatedUsers.setUsers(List.of(userSearchResultsDto1, userSearchResultsDto2));
         mockPaginatedUsers.setNextPageLink("nextLink123");
         mockPaginatedUsers.setPreviousPageLink("prevLink456");
@@ -431,7 +440,8 @@ class UserControllerTest {
         when(session.getAttribute("successMessage")).thenReturn(null);
         when(session.getAttribute("firmSearchForm")).thenReturn(null);
         // Act
-        String viewName = userController.displayAllUsers(10, 1, null, null, null, null, false, false, false, false, null,
+        String viewName = userController.displayAllUsers(10, 1, null, null, null, null, false, false, false, false,
+                null,
                 firmSearchForm,
                 model, session,
                 authentication);
@@ -455,7 +465,8 @@ class UserControllerTest {
         when(firmService.getUserFirm(any())).thenReturn(Optional.of(firmDto));
         when(loginService.getCurrentEntraUser(any())).thenReturn(EntraUser.builder().build());
         // Act
-        String viewName = userController.displayAllUsers(10, 1, "firstName", null, null, "", false, false, false, false, null,
+        String viewName = userController.displayAllUsers(10, 1, "firstName", null, null, "", false, false, false, false,
+                null,
                 firmSearchForm, model,
                 session,
                 authentication);
@@ -598,7 +609,8 @@ class UserControllerTest {
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
@@ -647,7 +659,8 @@ class UserControllerTest {
         when(accessControlService.authenticatedUserHasPermission(any())).thenReturn(false);
         when(accessControlService.authenticatedUserHasPermission(eq(Permission.EDIT_USER_DETAILS))).thenReturn(true);
         userController.editUserDetailFeatureEnabled = true;
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
 
@@ -712,7 +725,8 @@ class UserControllerTest {
             Map<String, Object> userListFilters = new HashMap<>();
             userListFilters.put(filterKey, nonDefaultUserListFilters.get(filterKey));
             when(session.getAttribute("userListFilters")).thenReturn(userListFilters);
-            when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+            when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                    .thenReturn(UserProfileSilasStatus.COMPLETE);
 
             String view = userController.manageUser(userId, model, session, authentication);
 
@@ -755,7 +769,8 @@ class UserControllerTest {
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(accessControlService.canSendVerificationEmail(mockUser.getId().toString())).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(mockUser.getId().toString(), model, session, authentication);
@@ -786,9 +801,9 @@ class UserControllerTest {
                 .build();
 
         UserProfile currentProfile = UserProfile.builder().userType(UserType.INTERNAL).build();
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason reason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("CyberRisk").label("Cyber risk").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason reason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("CyberRisk").label("Cyber risk").build();
         reason.setId(UUID.randomUUID());
 
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
@@ -802,10 +817,10 @@ class UserControllerTest {
         assertThat(view).isEqualTo("delete-user-reason");
         assertThat(model.getAttribute("deleteReasons")).isNotNull();
         @SuppressWarnings("unchecked")
-        List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel> reasons =
-                (List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel>) model.getAttribute("deleteReasons");
+        List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel> reasons = (List<uk.gov.justice.laa.portal.landingpage.viewmodel.DeleteUserReasonViewModel>) model
+                .getAttribute("deleteReasons");
         assertThat(reasons).hasSize(1);
-        assertThat(reasons.get(0).getCode()).isEqualTo("CyberRisk");
+        assertThat(reasons.getFirst().getCode()).isEqualTo("CyberRisk");
         verify(userService).getDeleteUserReasons(true);
     }
 
@@ -822,16 +837,18 @@ class UserControllerTest {
                 .entraUser(entraUserDto)
                 .userType(UserType.EXTERNAL)
                 .build();
-        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString()).build();
+        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString())
+                .build();
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
-        when(userService.deleteExternalUser(anyString(), any(UUID.class), any(String.class))).thenReturn(DeletedUser.builder().build());
+        when(userService.deleteExternalUser(anyString(), any(UUID.class), any(String.class)))
+                .thenReturn(DeletedUser.builder().build());
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(currentUser);
         String reasonId = UUID.randomUUID().toString();
         UserProfile currentProfile = UserProfile.builder().userType(UserType.EXTERNAL).build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(currentProfile);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("Reason").label("Test reason").build();
         deleteReason.setId(UUID.fromString(reasonId));
         when(userService.getDeleteUserReasons(anyBoolean())).thenReturn(List.of(deleteReason));
         // Act
@@ -858,7 +875,8 @@ class UserControllerTest {
                 .userType(UserType.EXTERNAL)
                 .build();
 
-        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString()).build();
+        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString())
+                .build();
 
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(currentUser);
@@ -866,17 +884,16 @@ class UserControllerTest {
         String reasonId = UUID.randomUUID().toString();
         UserProfile currentProfile = UserProfile.builder().userType(UserType.EXTERNAL).build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(currentProfile);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("Reason").label("Test reason").build();
         deleteReason.setId(UUID.fromString(reasonId));
         when(userService.getDeleteUserReasons(anyBoolean())).thenReturn(List.of(deleteReason));
 
         when(userService.deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        )).thenReturn(DeletedUser.builder().encounteredTsErrors(true).build());
+                eq(currentUser.getEntraOid()))).thenReturn(DeletedUser.builder().encounteredTsErrors(true).build());
 
         // Act
         String view = userController.deleteExternalUser(userProfileId, reasonId, authentication, session, model);
@@ -889,8 +906,7 @@ class UserControllerTest {
         verify(userService).deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        );
+                eq(currentUser.getEntraOid()));
         verify(eventService).logEvent(any(DeleteUserAttemptAuditEvent.class));
     }
 
@@ -909,7 +925,8 @@ class UserControllerTest {
                 .userType(UserType.EXTERNAL)
                 .build();
 
-        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString()).build();
+        EntraUser currentUser = EntraUser.builder().id(UUID.randomUUID()).entraOid(UUID.randomUUID().toString())
+                .build();
 
         when(userService.getUserProfileById(userProfileId)).thenReturn(Optional.of(targetProfile));
         when(loginService.getCurrentEntraUser(authentication)).thenReturn(currentUser);
@@ -917,17 +934,16 @@ class UserControllerTest {
         String reasonId = UUID.randomUUID().toString();
         UserProfile currentProfile = UserProfile.builder().userType(UserType.INTERNAL).build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(currentProfile);
-        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason =
-                uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason.builder()
-                        .code("Reason").label("Test reason").build();
+        uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason deleteReason = uk.gov.justice.laa.portal.landingpage.entity.DeleteUserReason
+                .builder()
+                .code("Reason").label("Test reason").build();
         deleteReason.setId(UUID.fromString(reasonId));
         when(userService.getDeleteUserReasons(anyBoolean())).thenReturn(List.of(deleteReason));
 
         when(userService.deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        )).thenThrow(new RuntimeException("Tech Services unavailable"));
+                eq(currentUser.getEntraOid()))).thenThrow(new RuntimeException("Tech Services unavailable"));
 
         // Act
         String view = userController.deleteExternalUser(userProfileId, reasonId, authentication, session, model);
@@ -940,8 +956,7 @@ class UserControllerTest {
         verify(userService).deleteExternalUser(
                 eq(userProfileId),
                 any(UUID.class),
-                eq(currentUser.getEntraOid())
-        );
+                eq(currentUser.getEntraOid()));
         verify(eventService).logEvent(any(DeleteUserAttemptAuditEvent.class));
     }
 
@@ -981,7 +996,8 @@ class UserControllerTest {
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
@@ -1032,7 +1048,8 @@ class UserControllerTest {
 
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(mockUser));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // Act
         String view = userController.manageUser(userId, model, session, authentication);
@@ -1296,7 +1313,7 @@ class UserControllerTest {
         testUserRole.setId("testUserAppRoleId");
         List<AppRoleDto> testUserRoles = List.of(testUserRole);
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
-        //setup app
+        // setup app
         String appId = String.valueOf(UUID.randomUUID());
         AppDto currentApp = new AppDto();
         currentApp.setId(appId);
@@ -1354,7 +1371,7 @@ class UserControllerTest {
         testUserRole.setId("testUserAppRoleId");
         List<AppRoleDto> testUserRoles = List.of(testUserRole);
         when(userService.getUserAppRolesByUserId(userId)).thenReturn(testUserRoles);
-        //setup app
+        // setup app
         String appId = String.valueOf(UUID.randomUUID());
         AppDto currentApp = new AppDto();
         currentApp.setId(appId);
@@ -1389,7 +1406,7 @@ class UserControllerTest {
         UserProfileDto testUserProfile = new UserProfileDto();
         testUserProfile.setUserType(UserType.EXTERNAL);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(testUserProfile));
-        //setup App
+        // setup App
         AppDto currentApp = new AppDto();
         currentApp.setId("testAppId");
         currentApp.setName("testAppName");
@@ -1418,7 +1435,8 @@ class UserControllerTest {
         testSession.setAttribute("selectedApps", selectedApps);
         List<AppRoleDto> allRoles = List.of(testRole1, testRole2, testRole3);
         when(userService.getAppByAppId(currentApp.getId())).thenReturn(Optional.of(currentApp));
-        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.EXTERNAL, null)).thenReturn(allRoles);
+        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.EXTERNAL, null))
+                .thenReturn(allRoles);
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
         when(roleAssignmentService.filterRoles(any(), any())).thenReturn(allRoles);
@@ -1471,7 +1489,8 @@ class UserControllerTest {
         testSession.setAttribute("selectedApps", selectedApps);
         List<AppRoleDto> allRoles = List.of(testRole1, testRole2, testRole3, testRole4);
         when(userService.getAppByAppId(currentApp.getId())).thenReturn(Optional.of(currentApp));
-        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.INTERNAL, null)).thenReturn(allRoles);
+        when(userService.getAppRolesByAppIdAndUserType(currentApp.getId(), UserType.INTERNAL, null))
+                .thenReturn(allRoles);
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
         when(roleAssignmentService.filterRoles(any(), any())).thenReturn(allRoles);
@@ -1726,7 +1745,7 @@ class UserControllerTest {
         session.setAttribute("selectedApps", List.of(app1Id, app2Id, app3Id));
         Map<Integer, List<String>> existingRoles = new HashMap<>();
         existingRoles.put(0, List.of("role1", "role2")); // app1 roles
-        existingRoles.put(1, List.of("role3"));          // app2 roles
+        existingRoles.put(1, List.of("role3")); // app2 roles
         existingRoles.put(2, List.of("role4", "role5")); // app3 roles
         session.setAttribute("editUserAllSelectedRoles", existingRoles);
 
@@ -1743,7 +1762,8 @@ class UserControllerTest {
         assertThat(updatedApps).containsExactly(app1Id, app3Id);
 
         @SuppressWarnings("unchecked")
-        Map<Integer, List<String>> updatedRoles = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
+        Map<Integer, List<String>> updatedRoles = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
         assertThat(updatedRoles).hasSize(2);
         assertThat(updatedRoles.get(0)).containsExactly("role1", "role2"); // app1 roles preserved at index 0
         assertThat(updatedRoles.get(1)).containsExactly("role4", "role5"); // app3 roles moved to index 1
@@ -1778,7 +1798,8 @@ class UserControllerTest {
         List<String> updatedApps = (List<String>) session.getAttribute("selectedApps");
         assertThat(updatedApps).containsExactly(app1Id, app2Id);
 
-        // Should not have created editUserAllSelectedRoles since there was no existing data to clean
+        // Should not have created editUserAllSelectedRoles since there was no existing
+        // data to clean
         assertThat(session.getAttribute("editUserAllSelectedRoles")).isNull();
     }
 
@@ -1828,7 +1849,8 @@ class UserControllerTest {
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
-        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model.getAttribute("selectedAppRolesGrouped");
+        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model
+                .getAttribute("selectedAppRolesGrouped");
         assertThat(selectedAppRolesGrouped).hasSize(2);
         assertThat(selectedAppRolesGrouped.get("app1")).isNotNull();
         assertThat(selectedAppRolesGrouped.get("app1").size()).isEqualTo(2);
@@ -1882,7 +1904,8 @@ class UserControllerTest {
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
-        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model.getAttribute("selectedAppRolesGrouped");
+        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model
+                .getAttribute("selectedAppRolesGrouped");
         assertThat(selectedAppRolesGrouped).hasSize(3);
         assertThat(selectedAppRolesGrouped.get("app1")).isNotNull();
         assertThat(selectedAppRolesGrouped.get("app2")).isNotNull();
@@ -1935,7 +1958,8 @@ class UserControllerTest {
 
         // Then - should complete editing and redirect to manage user
         assertThat(view).isEqualTo("edit-user-roles-check-answer");
-        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model.getAttribute("selectedAppRolesGrouped");
+        Map<String, List<UserRole>> selectedAppRolesGrouped = (Map<String, List<UserRole>>) model
+                .getAttribute("selectedAppRolesGrouped");
         assertThat(selectedAppRolesGrouped).hasSize(2);
         assertThat(selectedAppRolesGrouped.get("Unknown app")).isNotNull();
         assertThat(selectedAppRolesGrouped.get("app1")).isNotNull();
@@ -2060,7 +2084,8 @@ class UserControllerTest {
         // When
         String redirect = userController.editUserRolesCheckAnswerSubmit(userId.toString(), session, authentication);
 
-        // Then - duplicate key violation is handled gracefully; user still reaches confirmation
+        // Then - duplicate key violation is handled gracefully; user still reaches
+        // confirmation
         assertThat(redirect).isEqualTo("redirect:/admin/users/edit/" + userId + "/confirmation");
     }
 
@@ -2083,12 +2108,14 @@ class UserControllerTest {
         session.setAttribute("editUserAllSelectedRoles", new HashMap<>());
         when(roleAssignmentService.canAssignRole(any(), any())).thenReturn(true);
         when(userService.updateUserRoles(any(), any(), any(), any()))
-                .thenThrow(new TechServicesClientException("Error while sending security group changes to Tech Services."));
+                .thenThrow(new TechServicesClientException(
+                        "Error while sending security group changes to Tech Services."));
 
         // When
         String redirect = userController.editUserRolesCheckAnswerSubmit(userId.toString(), session, authentication);
 
-        // Then - concurrent Tech Services failure is handled gracefully; user still reaches confirmation
+        // Then - concurrent Tech Services failure is handled gracefully; user still
+        // reaches confirmation
         assertThat(redirect).isEqualTo("redirect:/admin/users/edit/" + userId + "/confirmation");
     }
 
@@ -2160,7 +2187,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -2192,7 +2220,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -2223,7 +2252,8 @@ class UserControllerTest {
         MockHttpSession testSession = new MockHttpSession();
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession,  model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-details");
@@ -2233,7 +2263,8 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyAssociatedWithAnotherUser() throws IOException {
+    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyAssociatedWithAnotherUser()
+            throws IOException {
         // Given
         final String userId = "user123";
         EditUserDetailsForm form = new EditUserDetailsForm();
@@ -2255,7 +2286,8 @@ class UserControllerTest {
         MockHttpSession testSession = new MockHttpSession();
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession,  model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-details");
@@ -2265,7 +2297,8 @@ class UserControllerTest {
     }
 
     @Test
-    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyRegisteredMultiFirmUser() throws IOException {
+    void updateUserDetails_shouldReturnToFormOnValidationErrors_emailAddressIsAlreadyRegisteredMultiFirmUser()
+            throws IOException {
         // Given
         final String userId = "user123";
         EditUserDetailsForm form = new EditUserDetailsForm();
@@ -2283,13 +2316,13 @@ class UserControllerTest {
         when(userService.isMultiFirmUserByEmail(anyString())).thenReturn(true);
         when(emailValidationService.isValidEmailDomain(anyString())).thenReturn(true);
 
-
         BindingResult bindingResult = Mockito.mock(BindingResult.class);
         when(bindingResult.hasErrors()).thenReturn(true);
         MockHttpSession testSession = new MockHttpSession();
 
         // When
-        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model, redirectAttributes, authentication);
+        String view = userController.updateUserDetails(userId, form, bindingResult, testSession, model,
+                redirectAttributes, authentication);
 
         // Then
         assertThat(view).isEqualTo("edit-user-details");
@@ -2402,8 +2435,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2461,8 +2493,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2518,8 +2549,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2554,7 +2584,7 @@ class UserControllerTest {
                 .userProfileStatus(UserProfileStatus.COMPLETE)
                 .unrestrictedOfficeAccess(false)
                 .appRoles(List.of(AppRoleDto.builder()
-                                .name("other role")
+                        .name("other role")
                         .build()))
                 .build();
 
@@ -2581,8 +2611,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(EXTERNAL_USER_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2617,7 +2646,7 @@ class UserControllerTest {
                 .userProfileStatus(UserProfileStatus.COMPLETE)
                 .unrestrictedOfficeAccess(false)
                 .appRoles(List.of(AppRoleDto.builder()
-                                .name(FIRM_USER_MANAGER.getDescription())
+                        .name(FIRM_USER_MANAGER.getDescription())
                         .build()))
                 .build();
 
@@ -2645,8 +2674,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(EXTERNAL_USER_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -2776,7 +2804,8 @@ class UserControllerTest {
         List<OfficeModel> selectOfficesDisplay = (List<OfficeModel>) model.getAttribute("userOffices");
         assertThat(selectOfficesDisplay).isNotEmpty();
         assertThat(selectOfficesDisplay.getFirst().getId()).isEqualTo(of1.getId());
-        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model.getAttribute("officesByCity");
+        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model
+                .getAttribute("officesByCity");
         assertThat(officesByCity).isNotNull();
         assertThat(officesByCity).containsKey("city");
         assertThat(officesByCity.get("city")).containsExactly(of1);
@@ -2809,7 +2838,8 @@ class UserControllerTest {
         // When
         userController.updateUserOfficesCheck(userId, model, testSession);
         // Then
-        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model.getAttribute("officesByCity");
+        Map<String, List<OfficeModel>> officesByCity = (Map<String, List<OfficeModel>>) model
+                .getAttribute("officesByCity");
         assertThat(officesByCity).isNotNull();
         assertThat(officesByCity.keySet()).containsExactly("Birmingham", "London", "Other cities");
     }
@@ -3189,7 +3219,8 @@ class UserControllerTest {
         // When
         String view = userController.updateUserRoles(userId, rolesForm, bindingResult, 0, testSession, model);
 
-        // Then - should skip validation and proceed to next app rather than re-rendering the empty form
+        // Then - should skip validation and proceed to next app rather than
+        // re-rendering the empty form
         assertThat(view).isEqualTo("redirect:/admin/users/edit/" + userId + "/roles?selectedAppIndex=1");
     }
 
@@ -3217,7 +3248,8 @@ class UserControllerTest {
 
     @Test
     void updateUserRoles_whenSessionModelMissingAndValidationErrors_shouldProceedRatherThanThrow() {
-        // Given - session model is absent entirely (e.g. session expired or user posted directly)
+        // Given - session model is absent entirely (e.g. session expired or user posted
+        // directly)
         String userId = "550e8400-e29b-41d4-a716-446655440000";
         RolesForm rolesForm = new RolesForm();
 
@@ -3434,7 +3466,8 @@ class UserControllerTest {
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById("id1")).thenReturn(Optional.of(userProfile));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         String view = userController.manageUser("id1", model, session, authentication);
 
@@ -3476,7 +3509,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById("internal-user-id")).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser("internal-user-id", model, session, authentication);
@@ -3517,7 +3551,8 @@ class UserControllerTest {
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER)).thenReturn(false);
         when(accessControlService.authenticatedUserHasPermission(Permission.EDIT_USER_OFFICE)).thenReturn(false);
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_USER_OFFICE)).thenReturn(false);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser("external-user-id", model, session, authentication);
@@ -3564,7 +3599,8 @@ class UserControllerTest {
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER)).thenReturn(true);
         when(accessControlService.authenticatedUserHasPermission(Permission.EDIT_USER_OFFICE)).thenReturn(true);
         when(accessControlService.authenticatedUserHasPermission(Permission.VIEW_USER_OFFICE)).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser("external-user-id", model, session, authentication);
@@ -3605,7 +3641,8 @@ class UserControllerTest {
         when(userService.getUserProfileById("external-user-id")).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser("external-user-id", model, session, authentication);
@@ -3653,7 +3690,8 @@ class UserControllerTest {
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canDeleteFirmProfile("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser("external-user-id", model, session, authentication);
@@ -3703,7 +3741,8 @@ class UserControllerTest {
         when(accessControlService.canEditUser("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canDeleteFirmProfile("550e8400-e29b-41d4-a716-446655440000")).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(false);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser("external-user-id", model, session, authentication);
@@ -3750,7 +3789,8 @@ class UserControllerTest {
         when(userService.isAccessGranted(profileId.toString())).thenReturn(true);
         when(userService.getProfileCountByEntraUserId(entraUserId)).thenReturn(2L);
         when(accessControlService.canEditUser(profileId.toString())).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
         // Use lenient() since this won't be called when viewing own profile
         lenient().when(accessControlService.canDeleteFirmProfile(profileId.toString())).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(true);
@@ -3807,7 +3847,8 @@ class UserControllerTest {
         when(accessControlService.canDeleteFirmProfile(viewedProfileId.toString())).thenReturn(true);
         when(accessControlService.canViewAllFirmsOfMultiFirmUser()).thenReturn(true);
         when(accessControlService.canConvertUserToMultiFirm(entraUserId.toString())).thenReturn(false);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser(viewedProfileId.toString(), model, session, authentication);
@@ -3892,7 +3933,7 @@ class UserControllerTest {
     @Test
     void addUserCheckAnswers_shouldCallCreateUserAndRedirect() {
         MockHttpSession mockSession = new MockHttpSession();
-        FirmDto firmDto =  FirmDto.builder().id(UUID.randomUUID()).build();
+        FirmDto firmDto = FirmDto.builder().id(UUID.randomUUID()).build();
         EntraUserDto user = new EntraUserDto();
         mockSession.setAttribute("user", user);
         mockSession.setAttribute("isUserManager", true);
@@ -4303,7 +4344,8 @@ class UserControllerTest {
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(editorUserProfile);
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser(userId, model, session, authentication);
@@ -4349,7 +4391,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfile));
         when(userService.isAccessGranted(any())).thenReturn(false);
         when(accessControlService.canEditUser(any())).thenReturn(true);
-        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class))).thenReturn(UserProfileSilasStatus.COMPLETE);
+        when(userService.calculateSilasStatusForUserProfile(any(UserProfileDto.class)))
+                .thenReturn(UserProfileSilasStatus.COMPLETE);
 
         // When
         String view = userController.manageUser(userId, model, session, authentication);
@@ -4429,8 +4472,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5039,8 +5081,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
 
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
@@ -5109,8 +5150,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(officeService.getOfficesByFirms(anyList())).thenReturn(allOffices);
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
@@ -5124,7 +5164,6 @@ class UserControllerTest {
         assertThat(model.getAttribute("hasAllOffices")).isEqualTo(false);
         assertThat(model.getAttribute("hasNoOffices")).isEqualTo(false);
         assertThat(model.getAttribute("shouldShowNoOffice")).isEqualTo(false);
-
 
         @SuppressWarnings("unchecked")
         List<OfficeModel> officeData = (List<OfficeModel>) model.getAttribute("officeData");
@@ -5166,8 +5205,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5218,8 +5256,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name("Firm User Manager")
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5270,8 +5307,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(EXTERNAL_USER_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5327,8 +5363,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(GLOBAL_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5384,8 +5419,7 @@ class UserControllerTest {
                 .appRoles(Set.of(
                         AppRole.builder()
                                 .name(GLOBAL_ADMIN.getDescription())
-                                .build()
-                ))
+                                .build()))
                 .build();
         when(loginService.getCurrentProfile(authentication)).thenReturn(userProfile);
 
@@ -5505,7 +5539,8 @@ class UserControllerTest {
     }
 
     @Test
-    void grantAccessUpdateUserOffices_shouldReturnToOfficeSelectionIfSessionIsEmptyOnValidationErrors() throws IOException {
+    void grantAccessUpdateUserOffices_shouldReturnToOfficeSelectionIfSessionIsEmptyOnValidationErrors()
+            throws IOException {
         // Given
         final String userId = "550e8400-e29b-41d4-a716-446655440010";
         OfficesForm officesForm = new OfficesForm();
@@ -5567,7 +5602,8 @@ class UserControllerTest {
         assertThat(model.getAttribute("isCcmsApp")).isEqualTo(true);
         // When no CCMS roles exist, should have empty map with all sections initialized
         assertThat(model.getAttribute("ccmsRolesBySection")).isNotNull();
-        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model.getAttribute("ccmsRolesBySection");
+        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model
+                .getAttribute("ccmsRolesBySection");
         assertThat(ccmsRolesBySection).containsKeys("Provider", "Chambers", "Advocate", "Other");
         assertThat(ccmsRolesBySection.get("Provider")).isEmpty();
         assertThat(ccmsRolesBySection.get("Chambers")).isEmpty();
@@ -5629,7 +5665,8 @@ class UserControllerTest {
         Map<String, Boolean> ccmsRolesBySectionFlags = (Map<String, Boolean>) model
                 .getAttribute("ccmsRoleDisplayFlags");
         assertThat(ccmsRolesBySection).isNotNull();
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1, ccmsRoleViewModel2);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1,
+                ccmsRoleViewModel2);
         assertThat(ccmsRolesBySectionFlags).isNotNull();
         assertThat(ccmsRolesBySectionFlags.get("Provider")).isTrue();
         assertThat(ccmsRolesBySectionFlags.get("Chambers")).isFalse();
@@ -5911,7 +5948,8 @@ class UserControllerTest {
         assertThat(model.getAttribute("isCcmsApp")).isEqualTo(true);
         // When no CCMS roles exist, should have empty map with all sections initialized
         assertThat(model.getAttribute("ccmsRolesBySection")).isNotNull();
-        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model.getAttribute("ccmsRolesBySection");
+        Map<String, List<AppRoleViewModel>> ccmsRolesBySection = (Map<String, List<AppRoleViewModel>>) model
+                .getAttribute("ccmsRolesBySection");
         assertThat(ccmsRolesBySection).containsKeys("Provider", "Chambers", "Advocate", "Other");
         assertThat(ccmsRolesBySection.get("Provider")).isEmpty();
         assertThat(ccmsRolesBySection.get("Chambers")).isEmpty();
@@ -5971,7 +6009,8 @@ class UserControllerTest {
         Map<String, Boolean> ccmsRolesBySectionFlags = (Map<String, Boolean>) model
                 .getAttribute("ccmsRoleDisplayFlags");
         assertThat(ccmsRolesBySection).isNotNull();
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1, ccmsRoleViewModel2);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1,
+                ccmsRoleViewModel2);
         assertThat(ccmsRolesBySectionFlags).isNotNull();
         assertThat(ccmsRolesBySectionFlags.get("Provider")).isTrue();
         assertThat(ccmsRolesBySectionFlags.get("Chambers")).isFalse();
@@ -6078,10 +6117,12 @@ class UserControllerTest {
         assertThat(ccmsRolesBySection).isNotNull();
 
         // Verify Provider section contains firm, office, and cross office roles
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(firmRoleViewModel, officeRoleViewModel, crossOfficeRoleViewModel);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(firmRoleViewModel, officeRoleViewModel,
+                crossOfficeRoleViewModel);
 
         // Verify Chambers section contains chambers and counsel roles
-        assertThat(ccmsRolesBySection.get("Chambers")).containsExactlyInAnyOrder(chambersRoleViewModel, counselRoleViewModel);
+        assertThat(ccmsRolesBySection.get("Chambers")).containsExactlyInAnyOrder(chambersRoleViewModel,
+                counselRoleViewModel);
 
         // Verify Advocate section contains advocate role
         assertThat(ccmsRolesBySection.get("Advocate")).containsExactly(advocateRoleViewModel);
@@ -6142,9 +6183,9 @@ class UserControllerTest {
 
         // Create roles - mix of CCMS and non-CCMS roles
         List<AppRoleDto> roles = List.of(
-                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 1", "XXCCMS_FIRM_ADMIN"),  // CCMS role
-                createAppRoleDto(UUID.randomUUID().toString(), "Non-CCMS Role", null),               // Non-CCMS role
-                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE")     // CCMS role
+                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 1", "XXCCMS_FIRM_ADMIN"), // CCMS role
+                createAppRoleDto(UUID.randomUUID().toString(), "Non-CCMS Role", null), // Non-CCMS role
+                createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE") // CCMS role
         );
 
         MockHttpSession testSession = new MockHttpSession();
@@ -6240,7 +6281,8 @@ class UserControllerTest {
         Map<String, Boolean> ccmsRolesBySectionFlags = (Map<String, Boolean>) model
                 .getAttribute("ccmsRoleDisplayFlags");
         assertThat(ccmsRolesBySection).isNotNull();
-        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1, ccmsRoleViewModel2);
+        assertThat(ccmsRolesBySection.get("Provider")).containsExactlyInAnyOrder(ccmsRoleViewModel1,
+                ccmsRoleViewModel2);
         assertThat(ccmsRolesBySectionFlags).isNotNull();
         assertThat(ccmsRolesBySectionFlags.get("Provider")).isTrue();
         assertThat(ccmsRolesBySectionFlags.get("Chambers")).isFalse();
@@ -6467,7 +6509,8 @@ class UserControllerTest {
         when(roleAssignmentService.canAssignRole(any(), anyCollection())).thenReturn(true);
 
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // Then
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/confirmation");
@@ -6503,7 +6546,8 @@ class UserControllerTest {
         when(userService.getUserProfileById(userId)).thenReturn(Optional.of(userProfileDto));
 
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/journey-completed");
@@ -6541,7 +6585,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(UserProfile.builder().build());
         when(roleAssignmentService.canAssignRole(any(), anyList())).thenReturn(false);
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/confirmation");
@@ -6578,7 +6623,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(UserProfile.builder().build());
         when(accessControlService.canAssignExternalAppRoles(userId)).thenReturn(false);
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -6604,7 +6650,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication)).thenReturn(UserProfile.builder().build());
         when(accessControlService.canAssignInternalAppRoles(userId)).thenReturn(false);
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
         // then
         assertThat(view).isEqualTo("redirect:/admin/users/manage/" + userId);
@@ -6636,9 +6683,11 @@ class UserControllerTest {
                         "could not execute statement; constraint [user_profile_app_role_pkey]"));
 
         // When
-        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes, testSession);
+        String view = userController.grantAccessProcessCheckAnswers(userId, authentication, redirectAttributes,
+                testSession);
 
-        // Then - duplicate key violation from concurrent submit is handled gracefully; user still reaches confirmation
+        // Then - duplicate key violation from concurrent submit is handled gracefully;
+        // user still reaches confirmation
         assertThat(view).isEqualTo("redirect:/admin/users/grant-access/" + userId + "/confirmation");
         assertThat(testSession.getAttribute("allSelectedRoles")).isNull();
         assertThat(testSession.getAttribute("selectedOffices")).isNull();
@@ -6915,8 +6964,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
 
-
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -6930,7 +6979,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
         Assertions.assertEquals(referer, model.getAttribute("referer"));
     }
 
@@ -6958,7 +7008,8 @@ class UserControllerTest {
                 .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
         when(disableUserService.getDisableUserReasons(UserTypeReasonDisable.DEFAULT)).thenReturn(List.of(reason));
 
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -6972,7 +7023,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
         Assertions.assertEquals(referer, model.getAttribute("referer"));
     }
 
@@ -6981,30 +7033,32 @@ class UserControllerTest {
         // Given
         UUID userId = UUID.randomUUID();
         EntraUserDto returnedUser = EntraUserDto.builder()
-            .id(userId.toString())
-            .fullName("Test User")
-            .build();
+                .id(userId.toString())
+                .fullName("Test User")
+                .build();
         DisableUserReasonDto reason = DisableUserReasonDto.builder()
-            .id(UUID.randomUUID())
-            .name("Test Reason")
-            .description("A test reason.")
-            .build();
+                .id(UUID.randomUUID())
+                .name("Test Reason")
+                .description("A test reason.")
+                .build();
         DisableUserReasonForm form = new DisableUserReasonForm();
         form.setReasonId(reason.getId().toString());
 
         when(userService.getEntraUserById(userId.toString())).thenReturn(Optional.of(returnedUser));
-        when(disableUserService.getDisableUserReasons(UserTypeReasonDisable.IS_USER_DISABLE)).thenReturn(List.of(reason));
+        when(disableUserService.getDisableUserReasons(UserTypeReasonDisable.IS_USER_DISABLE))
+                .thenReturn(List.of(reason));
 
         Set<AppRole> editorRoles = Set.of(AppRole.builder()
-            .name(FIRM_USER_MANAGER.getDescription())
-            .build());
+                .name(FIRM_USER_MANAGER.getDescription())
+                .build());
         when(loginService.getCurrentProfile(authentication))
-            .thenReturn(UserProfile.builder().appRoles(editorRoles).build());
+                .thenReturn(UserProfile.builder().appRoles(editorRoles).build());
 
         String referer = "audit";
         String profileId = UUID.randomUUID().toString();
 
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -7018,7 +7072,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
     }
 
     @Test
@@ -7048,7 +7103,8 @@ class UserControllerTest {
         when(loginService.getCurrentProfile(authentication))
                 .thenReturn(UserProfile.builder().appRoles(editorRoles).build());
 
-        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication, referer, profileId);
+        String view = userController.disableUserReasonsGet(userId.toString(), form, model, session, authentication,
+                referer, profileId);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
@@ -7062,7 +7118,8 @@ class UserControllerTest {
 
         DisableUserReasonViewModel returnedReason = (DisableUserReasonViewModel) returnedReasonObject;
         Assertions.assertEquals(reason.getId(), returnedReason.getId());
-        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
         Assertions.assertEquals(referer, model.getAttribute("referer"));
     }
 
@@ -7096,13 +7153,15 @@ class UserControllerTest {
         when(loginService.getCurrentEntraUser(any())).thenReturn(authenticatedUser);
 
         String referer = "manage";
-        String view = userController.disableUserReasonsPost(userId.toString(), form, result, authentication, model, session, referer);
+        String view = userController.disableUserReasonsPost(userId.toString(), form, result, authentication, model,
+                session, referer);
 
         Assertions.assertEquals("disable-user-completed", view);
         Assertions.assertEquals(returnedUser, model.getAttribute("user"));
         Assertions.assertEquals(form, model.getAttribute("disableUserReasonsForm"));
         Assertions.assertEquals(model.getAttribute("referer"), referer);
-        Assertions.assertEquals("Disable User Success - " + returnedUser.getFullName(), model.getAttribute(ModelAttributes.PAGE_TITLE));
+        Assertions.assertEquals("Disable User Success - " + returnedUser.getFullName(),
+                model.getAttribute(ModelAttributes.PAGE_TITLE));
     }
 
     @Test
@@ -7118,7 +7177,6 @@ class UserControllerTest {
         errors.add(new ObjectError("Reason", "There was an error"));
         errors.add(new ObjectError("Reason", "There was another error"));
 
-
         DisableUserReasonForm form = new DisableUserReasonForm();
         form.setReasonId(reason.getId().toString());
 
@@ -7129,7 +7187,8 @@ class UserControllerTest {
         when(session.getAttribute(eq("disableUserReasonModel"))).thenReturn(model);
 
         String referer = "manage";
-        String view = userController.disableUserReasonsPost(UUID.randomUUID().toString(), form, result, authentication, model, session, referer);
+        String view = userController.disableUserReasonsPost(UUID.randomUUID().toString(), form, result, authentication,
+                model, session, referer);
 
         Assertions.assertEquals("disable-user-reason", view);
         Assertions.assertEquals("There was an error\nThere was another error", model.getAttribute("errorMessage"));
@@ -7562,8 +7621,11 @@ class UserControllerTest {
                 assertThat(anno.value().equals("@accessControlService.canEditUserAppRoleAssignments(#id)")
                         || anno.value().equals("@accessControlService.canEditUser(#id)")
                         || anno.value().equals("@accessControlService.canGrantUserAccess(#id)")
-                        || anno.value().equals("@accessControlService.canGrantUserAccess(#id) && @accessControlService.canRemoveAppRoles(#id)")
-                        || anno.value().equals("@accessControlService.canAssignAppRoles(#id) || @accessControlService.canRemoveAppRoles(#id) || @accessControlService.canEditUser(#id)")).isTrue();
+                        || anno.value().equals(
+                                "@accessControlService.canGrantUserAccess(#id) && @accessControlService.canRemoveAppRoles(#id)")
+                        || anno.value().equals(
+                                "@accessControlService.canAssignAppRoles(#id) || @accessControlService.canRemoveAppRoles(#id) || @accessControlService.canEditUser(#id)"))
+                        .isTrue();
                 continue;
             }
             if (canAcessMethods.contains(method.getName())) {
@@ -8033,7 +8095,8 @@ class UserControllerTest {
             when(roleAssignmentService.filterRoles(any(), any())).thenReturn(List.of(chambersRole1, chambersRole2));
             when(userService.getUserAppRolesByUserId(userId.toString())).thenReturn(List.of());
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             assertThat(view).isEqualTo("edit-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.CHAMBERS);
@@ -8044,7 +8107,8 @@ class UserControllerTest {
             UUID userId = UUID.randomUUID();
             MockHttpSession testSession = new MockHttpSession();
             testSession.setAttribute("selectedApps", List.of("app-id-1"));
-            FirmDto advocateFirm = FirmDto.builder().id(UUID.randomUUID()).name("Advocate Firm").type(FirmType.ADVOCATE).build();
+            FirmDto advocateFirm = FirmDto.builder().id(UUID.randomUUID()).name("Advocate Firm").type(FirmType.ADVOCATE)
+                    .build();
             UserProfileDto user = UserProfileDto.builder()
                     .id(userId)
                     .userType(UserType.EXTERNAL)
@@ -8071,7 +8135,8 @@ class UserControllerTest {
             when(userService.getUserAppRolesByUserId(userId.toString())).thenReturn(List.of());
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
 
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             assertThat(view).isEqualTo("edit-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.ADVOCATE);
@@ -8106,11 +8171,13 @@ class UserControllerTest {
                     .thenReturn(List.of(unrestrictedRole1, unrestrictedRole2));
             when(loginService.getCurrentProfile(authentication))
                     .thenReturn(UserProfile.builder().appRoles(new HashSet<>()).build());
-            when(roleAssignmentService.filterRoles(any(), any())).thenReturn(List.of(unrestrictedRole1, unrestrictedRole2));
+            when(roleAssignmentService.filterRoles(any(), any()))
+                    .thenReturn(List.of(unrestrictedRole1, unrestrictedRole2));
             when(userService.getUserAppRolesByUserId(userId.toString())).thenReturn(List.of());
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
 
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             assertThat(view).isEqualTo("edit-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, null);
@@ -8130,8 +8197,7 @@ class UserControllerTest {
             List<AppRoleDto> roles = List.of(
                     createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 1", "XXCCMS_FIRM_ADMIN"),
                     createAppRoleDto(UUID.randomUUID().toString(), "Non-CCMS Role", null),
-                    createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE")
-            );
+                    createAppRoleDto(UUID.randomUUID().toString(), "CCMS Role 2", "XXCCMS_ADVOCATE"));
             UUID userId = UUID.randomUUID();
             UserProfileDto user = UserProfileDto.builder()
                     .id(userId)
@@ -8146,7 +8212,8 @@ class UserControllerTest {
             when(roleAssignmentService.filterRoles(any(), any())).thenReturn(roles);
 
             // When
-            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication, model, testSession);
+            String view = userController.editUserRoles(userId.toString(), 0, new RolesForm(), null, authentication,
+                    model, testSession);
 
             // Then
             assertThat(view).isEqualTo("edit-user-roles");
@@ -8172,7 +8239,8 @@ class UserControllerTest {
             MockHttpSession testSession = new MockHttpSession();
             testSession.setAttribute("grantAccessSelectedApps", List.of("app-id-1"));
 
-            FirmDto lspFirm = FirmDto.builder().id(UUID.randomUUID()).name("LSP Firm").type(FirmType.LEGAL_SERVICES_PROVIDER).build();
+            FirmDto lspFirm = FirmDto.builder().id(UUID.randomUUID()).name("LSP Firm")
+                    .type(FirmType.LEGAL_SERVICES_PROVIDER).build();
             UserProfileDto user = UserProfileDto.builder()
                     .id(userId)
                     .userType(UserType.EXTERNAL)
@@ -8193,7 +8261,8 @@ class UserControllerTest {
 
             Model model = new ExtendedModelMap();
             when(userService.getUserProfileById(userId.toString())).thenReturn(Optional.of(user));
-            when(userService.getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.LEGAL_SERVICES_PROVIDER))
+            when(userService.getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL,
+                    FirmType.LEGAL_SERVICES_PROVIDER))
                     .thenReturn(List.of(lspRole1, lspRole2));
             when(loginService.getCurrentProfile(authentication))
                     .thenReturn(UserProfile.builder().id(UUID.randomUUID()).appRoles(new HashSet<>()).build());
@@ -8202,10 +8271,12 @@ class UserControllerTest {
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
             when(accessControlService.canAssignExternalAppRoles(userId.toString())).thenReturn(true);
 
-            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication, model, testSession, redirectAttributes);
+            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication,
+                    model, testSession, redirectAttributes);
 
             assertThat(view).isEqualTo("grant-access-user-roles");
-            verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL, FirmType.LEGAL_SERVICES_PROVIDER);
+            verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.EXTERNAL,
+                    FirmType.LEGAL_SERVICES_PROVIDER);
         }
 
         @Test
@@ -8243,7 +8314,8 @@ class UserControllerTest {
             when(userService.getAppByAppId("app-id-1")).thenReturn(Optional.of(appDto));
             when(accessControlService.canAssignInternalAppRoles(userId.toString())).thenReturn(true);
 
-            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication, model, testSession, redirectAttributes);
+            String view = userController.grantAccessEditUserRoles(userId.toString(), 0, new RolesForm(), authentication,
+                    model, testSession, redirectAttributes);
 
             assertThat(view).isEqualTo("grant-access-user-roles");
             verify(userService).getAppRolesByAppIdAndUserType("app-id-1", UserType.INTERNAL, null);
@@ -8308,7 +8380,6 @@ class UserControllerTest {
 
             FirmDto firm = FirmDto.builder().name("firmOne").id(selectedFirmId).build();
 
-
             UserProfileDto user = UserProfileDto.builder()
                     .id(UUID.fromString(userId))
                     .userType(UserType.EXTERNAL)
@@ -8324,7 +8395,8 @@ class UserControllerTest {
             when(userService.getUserProfileById(userId)).thenReturn(Optional.of(user));
 
             // When
-            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne", "reassign", model,
+            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne",
+                    "reassign", model,
                     redirectAttributes);
 
             assertThat(model.getAttribute("errorMessage")).isEqualTo("An error occurred while loading the page");
@@ -8357,7 +8429,8 @@ class UserControllerTest {
             RedirectAttributes redirectAttributes = new RedirectAttributesModelMap();
 
             // When
-            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne", "reassign", model,
+            String result = userController.showFirmReassignmentPage(userId, selectedFirmId.toString(), "firmOne",
+                    "reassign", model,
                     redirectAttributes);
 
             assertThat(redirectAttributes.getFlashAttributes().get("errorMessage"))
@@ -8371,12 +8444,11 @@ class UserControllerTest {
         void resendActivationEmail_whenSuccess() {
             UUID userId = UUID.randomUUID();
 
-            TechServicesApiResponse<SendUserVerificationEmailResponse> successResponse =
-                    TechServicesApiResponse.success(
+            TechServicesApiResponse<SendUserVerificationEmailResponse> successResponse = TechServicesApiResponse
+                    .success(
                             SendUserVerificationEmailResponse.builder()
                                     .message("Verification email sent successfully")
-                                    .build()
-                    );
+                                    .build());
 
             when(userService.sendVerificationEmail(userId.toString())).thenReturn(successResponse);
             when(accessControlService.canSendVerificationEmail(userId.toString())).thenReturn(true);
@@ -8397,11 +8469,12 @@ class UserControllerTest {
         void resendActivationEmail_whenError() {
             UUID userId = UUID.randomUUID();
 
-            TechServicesApiResponse<SendUserVerificationEmailResponse> errorResponse =
-                    mock(TechServicesApiResponse.class, RETURNS_DEEP_STUBS);
+            TechServicesApiResponse<SendUserVerificationEmailResponse> errorResponse = mock(
+                    TechServicesApiResponse.class, RETURNS_DEEP_STUBS);
 
             when(errorResponse.isSuccess()).thenReturn(false);
-            when(errorResponse.getError().getMessage()).thenReturn("Failed to generate and send activation code via email.");
+            when(errorResponse.getError().getMessage())
+                    .thenReturn("Failed to generate and send activation code via email.");
 
             when(userService.sendVerificationEmail(userId.toString())).thenReturn(errorResponse);
             when(accessControlService.canSendVerificationEmail(userId.toString())).thenReturn(true);
